syntax = "proto3";

package workflow;

service FlowChatServerService {
    rpc Start(StartRequest) returns (StartResponse) {}
    rpc Break(BreakRequest) returns (BreakResponse) {}
    rpc BreakBridge(BreakBridgeRequest) returns (BreakBridgeResponse) {}
    rpc ConfirmationMessage(ConfirmationMessageRequest) returns (ConfirmationMessageResponse) {}
}

message BreakBridgeRequest {
    int64 conversation_id = 1;
    string cause = 2;
}

message BreakBridgeResponse {
    Error error = 1;
}

message Message {
    int64 id = 1;
    string type = 2;

    message TextMessage {
        string text = 1;
    }

    oneof value {
        TextMessage text_message = 3;
    }
}

message StartRequest {
    int64 conversation_id = 1;
    int64 profile_id = 2;
    int64 domain_id = 3;
    Message message = 4;
    map<string, string>  variables = 5;
}

message Error {
    string id = 1;
    string message = 2;
}

message StartResponse {
    Error error = 1;
}

message BreakRequest {
    int64 conversation_id = 1;
}

message BreakResponse {
    Error error = 1;
}

message ConfirmationMessageRequest {
    int64 conversation_id = 1;
    string confirmation_id = 2;
    repeated Message messages = 3;
}

message ConfirmationMessageResponse {
    Error error = 1;
}